# csilk

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .lsan-suppressions  ABI_REPORT.md  ABI_REPORT.zh-CN.md  ANALYSIS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CMakeLists.txt  CODEPEC.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Dockerfile  Doxyfile  MANIFEST.in  OPTIMIZE.md  PLAN.md  README.md  README.zh-CN.md  build_example.sh  config_multi.yaml  debug.txt  example_app.c  example_easy.c  example_server.c  findings.md  libcsilk.map  progress.md  pyproject.toml  setup.py  task_plan.md  task_plan_v0.4.0.md  test.c  test_asgi.py  test_integration_output.txt
.github/workflows/: bench.yml  build.yml  cache-cleanup.yml  ci.yml  coverage.yml  docs.yml  release.yml  wheels.yml
benchmarks/: BENCHMARK_REPORT.md  README.md  compare_benchmarks.py  run_benchmarks.sh
benchmarks/results/: hello_t2_c10.txt  hello_t4_c100.txt  hello_t4_c100_pipeline.txt  hello_t4_c50.txt  json_t2_c10.txt  json_t4_c100.txt  json_t4_c50.txt  openapi_t4_c100.txt  routing_t4_c100.txt  static_1k_t4_c100.txt  static_small_t2_c10.txt  static_small_t4_c100.txt  static_small_t4_c50.txt
cmake/: .lsan-suppressions  .tsan-suppressions  csilk.cmake  format.cmake  gen-doxyfile.cmake  sources.cmake  tests.cmake
docs/: ARCH.md  Doxyfile.in  architecture.md  doxy-header.html  doxy-mermaid.css  getting-started.md  index.md  performance-tuning.md  troubleshooting.md
docs/contributing/: how-to-build.md  test-guide.md
docs/design/: abi-opaque-roadmap.md  admin-dashboard.md  hot-reload.md  http3-quic.md  io_uring.md  macos-port.md  wal-persistence.md
docs/html/: PLAN_8md.html  README_8md.html  annotated.html  annotated_dup.js  arena_8c.html  arena_8c.js  classes.html  config_8c.html  config_8c.js  context_8c.html  context_8c.js  csilk_8h.html  csilk_8h.js  csilk_8h_source.html  csilk__internal_8h.html  csilk__internal_8h.js  csilk__internal_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  example__server_8c.html  example__server_8c.js  files.html  files_dup.js  findings_8md.html  functions.html  functions_vars.html  gin_8h.html  gin_8h.js  gin_8h_source.html  gin__internal_8h.html  gin__internal_8h.js  gin__internal_8h_source.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  (+142 more)
docs/latex/: PLAN_8md.tex  annotated.tex  arena_8c.tex  config_8c.tex  context_8c.tex  csilk_8h.tex  csilk_8h_source.tex  csilk__internal_8h.tex  csilk__internal_8h_source.tex  example__server_8c.tex  files.tex  findings_8md.tex  gin_8h.tex  gin_8h_source.tex  gin__internal_8h.tex  gin__internal_8h_source.tex  group_8c.tex  logger_8c.tex  md_PLAN.tex  md_README.tex  md_findings.tex  md_progress.tex  md_task__plan.tex  progress_8md.tex  refman.tex  router_8c.tex  server_8c.tex  structcsilk__arena__chunk__s.tex  structcsilk__arena__s.tex  structcsilk__client__t.tex  structcsilk__config__t.tex  structcsilk__cors__config__t.tex  structcsilk__ctx__s.tex  structcsilk__group__s.tex  structcsilk__header__s.tex  structcsilk__log__config__t.tex  structcsilk__logger__t.tex  structcsilk__method__handler__s.tex  structcsilk__param__t.tex  structcsilk__request__t.tex  (+29 more)
docs/meta/: ABI_REPORT.md  ABI_REPORT.zh-CN.md  CODEPEC.md  PLAN.md
docs/module-design/: ai.md  app.md  arena.md  context.md  crypto.md  data.md  drivers.md  hooks.md  index.md  messaging.md  metrics.md  middleware.md  protocols.md  reflection.md  router.md  security.md  server.md  workflow.md
docs/research/: abi-opaque-roadmap.md  arena-formal-verification.md  http2.md  http3-quic.md  io_uring.md  macos-port.md  windows-port.md
docs/user-manual/: admin.md  advanced-usage.md  ai-engine.md  arena.md  configuration.md  database.md  deployment.md  hooks.md  hot-reload.md  index.md  (+6 more)
examples/: README.md  advanced_server.c  agent.yaml  example_admin_dashboard.c  example_ai.c  example_ai_providers.c  example_ai_workflow.c  example_app.c  example_custom_driver.c  example_db.c  example_server.c  example_sse.c  example_tls.c  example_websocket.c  example_workflow_ui.c  example_ws_tls_mq.c  hot_reload_app.c  hot_reload_launcher.c  workflow_agent.py
fuzz/: fuzz.dict  fuzz_headers.c  fuzz_test.c  fuzz_yaml.c
include/: context_internal.h  csilk.h  csilk_ai.h  csilk_app.h  csilk_db.h  csilk_easy.h  csilk_internal.h  csilk_perm.h  csilk_reflect.h  csilk_test.h  gin.h  gin_internal.h
python/: README.md  main.py  pyproject.toml  test_asgi.py
python/csilk/: __init__.py  __init__.pyi  _version.py  _version.py.in  ai.py  ai.pyi  app.py  app.pyi  asgi.py  cli.py  context.py  context.pyi  crypto.py  crypto.pyi  db.py  db.pyi  depends.py  lib.py  mcp.py  middleware.py  perm.py  perm.pyi  vector.py  vector.pyi  worker.py  workflow.py  workflow.pyi
python/tests/: test_ai.py  test_asgi.py  test_csilk.py  test_csilk_depends.py  test_mcp.py  test_middleware_bindings.py  test_vector.py  test_workflow.py  test_workflow_distributed.py  test_workflow_sse.py
scripts/: build_example.sh  check_mermaid.py  check_version_sync.sh  csilkskel  generate-sdk.py  package.sh  profile.sh  run_benchmarks.sh  setup_bench_tools.sh  tag-release.sh
src/: arena.c  config.c  context.c  csilk_easy.c  group.c  logger.c  reflect.c  router.c  server.c  url_parser.c  utils.c  websocket.c
tests/: fuzz_test.c  fuzz_url.c  fuzz_yaml.c  test_admin.c  test_ai.c  test_ai_ext.c  test_app.c  test_app_ext.c  test_app_integration.c  test_arena.c  test_async_keepalive.c  test_auth.c  test_cert.pem  test_cipher.c  test_codec_prop.c  test_config.c  test_config_comprehensive.c  test_config_load.c  test_config_tls.c  test_config_validate.c  test_connection.c  test_context.c  test_context_ext.c  test_context_reflect_ext.c  test_cookie.c  test_cors.c  test_cors_ext.c  test_crypto_driver.c  test_csrf.c  test_csrf_ext.c  test_db.c  test_edge.c  test_extra.c  test_file.c  test_form.c  test_get_param.c  test_group.c  test_group_ext.c  test_gzip.c  test_h2.c  (+88 more)
(+513 files in other folders)
